[package]
name = "esplora-btc-api"
version = "1.0.1"
authors = ["Interlay Ltd"]
edition = "2018"
description = "Esplora Bitcoin OpenAPI Client"
license = "Apache-2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
