[package]
name = "esplora-btc-api"
# do not replace the version
# this is used by CI to publish
version = "GIT_REF"
authors = ["Interlay Ltd"]
edition = "2018"
description = "Esplora Bitcoin OpenAPI Client"
documentation = "https://docs.rs/esplora-btc-api"
homepage = "https://github.com/Blockstream/esplora/blob/master/API.md"
repository = "https://github.com/interlay/esplora-btc-api"
license = "Apache-2.0"
include = [
  "src/**/*",
  "Cargo.toml"
]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "default-tls"]

[dev-dependencies]
